---
source: crates/engine/tests/common.rs
expression: query_ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "getSessionInfo",
                ),
            ): Command(
                CommandSelection {
                    target: CommandTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        command_name: CommandName(
                            Identifier(
                                "get_session_info",
                            ),
                        ),
                        arguments: {
                            ArgumentName(
                                Identifier(
                                    "userId",
                                ),
                            ): Literal(
                                Number(123),
                            ),
                        },
                    },
                    selection: Some(
                        {
                            Alias(
                                Identifier(
                                    "token",
                                ),
                            ): Field(
                                ObjectFieldSelection {
                                    target: ObjectFieldTarget {
                                        field_name: FieldName(
                                            Identifier(
                                                "token",
                                            ),
                                        ),
                                        arguments: {},
                                    },
                                    selection: None,
                                },
                            ),
                            Alias(
                                Identifier(
                                    "expiry",
                                ),
                            ): Field(
                                ObjectFieldSelection {
                                    target: ObjectFieldTarget {
                                        field_name: FieldName(
                                            Identifier(
                                                "expiry",
                                            ),
                                        ),
                                        arguments: {},
                                    },
                                    selection: None,
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
